--- a/data/collections.yml
+++ b/data/collections.yml
@@ -1,6 +1,6 @@
 collection_nav:
   behind_closed_doors:
-    description: "In May 2020 when the pandemic was raging a curator made a call out for a series of works to be shown virtually as if within a home . All the galleries and art spaces were closed, it was a brilliant and innovative way to allow art to be viewed on a new platform."
+    description: "In May 2020 when the pandemic was raging a curator made a call out for a series of works to be shown virtually as if within a home. All the galleries and art spaces were closed, it was a brilliant and innovative way to allow art to be viewed on a new platform.<br><br>The curator was <a href='https://www.abigailmillerstudio.co.uk'>Abigail Miller</a><br><br>It was a great opportunity to work with such a visionary and a wonderful artist and I cannot thank her enough for sheer professionalism and technical skills.\nFor the first time I combined my works with short prose pieces, a new step for me.\nI have gone on to have virtual shows and work in online and printed publications."
     pieces:
       - piece:
           url: "/images/last_post_in_lock_down.jpg"
