Add new images titles

--- a/data/collections.yml
+++ b/data/collections.yml
@@ -3,24 +3,24 @@ collection_nav:
     description: "Made during and after Covid ,these new pieces are reflective of isolation, loneliness and a feeling of being meaningless in the greater scheme of things.<br>Covid impacted upon my practice making it evolve as white spaces closed.<br>My work now features in zines worldwide and has returned cautiously to galleries."
     pieces:
       - piece:
-          url: "/images/1.jpg"
-          title: "1"
+          url: "/images/lady_in_waiting.jpg"
+          title: "Lady In Waiting"
           details: ""
       - piece:
-          url: "/images/2.jpg"
-          title: "2"
+          url: "/images/empty_vessels.jpg"
+          title: "Empty Vessels"
           details: ""
       - piece:
-          url: "/images/3.jpg"
-          title: "3"
+          url: "/images/time_passages.jpg"
+          title: "Time Passages"
           details: ""
       - piece:
-          url: "/images/4.jpg"
-          title: "4"
+          url: "/images/throuhh_a_glass_darkly.jpg"
+          title: "Throuhh a glass darkly"
           details: ""
       - piece:
-          url: "/images/5.jpg"
-          title: "5"
+          url: "/images/4_walls.jpg"
+          title: "4 Walls"
           details: ""
   behind_closed_doors:
     description: "In May 2020 when the pandemic was raging a curator made a call out for a series of works to be shown virtually as if within a home. All the galleries and art spaces were closed, it was a brilliant and innovative way to allow art to be viewed on a new platform.<br><br>The curator was <a href='https://www.abigailmillerstudio.co.uk'>Abigail Miller</a><br><br>It was a great opportunity to work with such a visionary and a wonderful artist and I cannot thank her enough for sheer professionalism and technical skills.\nFor the first time I combined my works with short prose pieces, a new step for me.\nI have gone on to have virtual shows and work in online and printed publications."
